<resources>
    <string name="app_name">TED</string>

    <string name="save_employee">Save Employee</string>
    <string name="delete_employee">Delete Employee</string>
    <string name="enter_employee_name">Enter employee name</string>
    <string name="employee_photo">Employee Photo</string>
    <string name="gender">Gender</string>
    <string name="role">Role</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="age">Age</string>
    <string name="share_text">Employee Data\nName: %1$s\nRole: %2$s\nAge: %3$s\nGender:  %4$s</string>
    <string name="no_app_csv">No app to read CSV file</string>
    <string name="years">%1$d years</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
